python_docker/python-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-redis-ser
spec:
  type: NodePort  # Exposes the service externally
  selector:
    app: python-redis-pod
  ports:
    - protocol: TCP
      port: 8000        # Service port that clients connect to
      targetPort: 8000  # Forward traffic to container's port
      nodePort: 30080   # Optional: If not specified, Kubernetes will assign a random port (range 30000-32767) (edited)
