python_docker/redis-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP  # Default type; makes Redis accessible only within the cluster
  selector:
    app: redis-pod
  ports:
    - protocol: TCP
      port: 6379        # Service port within the cluster
      targetPort: 6379  # Forward traffic to Redis container port
